# LDPCdecode

./: .gitignore  10GBPS-ETHERNET_1723_2048.alist  Basic_LDPC.sln  Basic_LDPC.vcxproj  Basic_LDPC.vcxproj.filters  CMakeLists.txt  MN_504.txt  README.md  T_BG1_26_4_48.txt  T_BG1_35_13_48.txt  Tanner_PON_LDPC.txt  codeword.cpp  codeword.m  debugresult1.txt  debugresult2.txt
enc_temp_folder/70a94d448d688958eedb47d3bc4fa919/: LDPC_Decoder.cpp
enc_temp_folder/d1cebf821812be9ea774c7e95a2b8f9/: LDPC_Decoder.h
enc_temp_folder/f8131628d89d92e34c5f89ec5eef7656/: LDPC_Decoder.cpp
include/: LDPC_Decoder.h  LDPC_Encoder.h  Simulation.h  codeword.h  define.h  struct.h
src/: LDPC_Decoder.cpp  LDPC_Encoder.cpp  Simulation.cpp  main.cpp
